// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessListTable component tests Snapshot testing initial empty data 1`] = `
<ProcessListTable
  checkedArray={
    Array [
      "ACTIVE",
    ]
  }
  filteredData={
    Object {
      "ProcessInstances": Array [
        Object {
          "addons": Array [
            "process-management",
            "infinispan-persistence",
            "prometheus-monitoring",
          ],
          "businessKey": "MQQ640",
          "childProcessInstances": Array [
            Object {
              "businessKey": null,
              "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
              "processName": "HotelBooking",
            },
            Object {
              "businessKey": null,
              "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
              "processName": "FlightBooking",
            },
          ],
          "end": null,
          "endpoint": "http://localhost:8080/travels",
          "error": null,
          "id": "201a8a42-043e-375a-9f52-57c804b24db4",
          "lastUpdate": "2020-05-07T06:50:18.502Z",
          "nodes": Array [
            Object {
              "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
              "enter": "2020-05-07T06:50:18.429Z",
              "exit": "2020-05-07T06:50:18.439Z",
              "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
              "name": "Book Hotel",
              "nodeId": "17",
              "type": "SubProcessNode",
            },
          ],
          "parentProcessInstance": null,
          "parentProcessInstanceId": null,
          "processId": "travels",
          "processName": "travels",
          "roles": Array [],
          "serviceUrl": "http://localhost:8080",
          "start": "2020-05-07T06:50:18.274Z",
          "state": "ACTIVE",
          "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
        },
      ],
    }
  }
  filters={
    Object {
      "businessKey": Array [],
      "status": Array [
        "ACTIVE",
      ],
    }
  }
  initData={
    Object {
      "ProcessInstances": Array [],
    }
  }
  isFilterClicked={false}
  isLoading={false}
  isLoadingMore={true}
  pageSize={10}
  selectedInstances={
    Object {
      "8035b580-6ae4-4aa8-9ec0-e18e19809e0b": Object {
        "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      },
    }
  }
  selectedNumber={0}
  setFilteredData={[MockFunction]}
  setInitData={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
        Array [
          Object {
            "ProcessInstances": Array [
              Object {
                "addons": Array [
                  "process-management",
                  "infinispan-persistence",
                  "prometheus-monitoring",
                ],
                "businessKey": "MQQ640",
                "error": null,
                "id": "201a8a42-043e-375a-9f52-57c804b24db4",
                "isChecked": false,
                "isOpen": false,
                "lastUpdate": "2020-05-07T06:50:18.502Z",
                "parentProcessInstanceId": null,
                "processId": "travels",
                "processName": "travels",
                "roles": Array [],
                "rootProcessInstanceId": null,
                "serviceUrl": "http://localhost:8080",
                "start": "2020-05-07T06:50:18.274Z",
                "state": "ACTIVE",
              },
            ],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsAllChecked={[MockFunction]}
  setIsError={
    [MockFunction] {
      "calls": Array [
        Array [
          false,
        ],
        Array [
          false,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsLoading={[MockFunction]}
  setLimit={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedInstances={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {},
        ],
        Array [
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedNumber={[MockFunction]}
>
  <DataList
    aria-label="Process instance list"
  >
    <ul
      aria-label="Process instance list"
      className="pf-c-data-list"
    >
      <KogitoEmptyState
        body="Try using different filters"
        title="No results found"
        type={0}
      >
        <MockedComponent />
      </KogitoEmptyState>
    </ul>
  </DataList>
</ProcessListTable>
`;

exports[`ProcessListTable component tests Snapshot testing with no data 1`] = `
<ProcessListTable
  checkedArray={
    Array [
      "ACTIVE",
    ]
  }
  filteredData={
    Object {
      "ProcessInstances": Array [
        Object {
          "addons": Array [
            "process-management",
            "infinispan-persistence",
            "prometheus-monitoring",
          ],
          "businessKey": "MQQ640",
          "childProcessInstances": Array [
            Object {
              "businessKey": null,
              "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
              "processName": "HotelBooking",
            },
            Object {
              "businessKey": null,
              "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
              "processName": "FlightBooking",
            },
          ],
          "end": null,
          "endpoint": "http://localhost:8080/travels",
          "error": null,
          "id": "201a8a42-043e-375a-9f52-57c804b24db4",
          "lastUpdate": "2020-05-07T06:50:18.502Z",
          "nodes": Array [
            Object {
              "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
              "enter": "2020-05-07T06:50:18.429Z",
              "exit": "2020-05-07T06:50:18.439Z",
              "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
              "name": "Book Hotel",
              "nodeId": "17",
              "type": "SubProcessNode",
            },
          ],
          "parentProcessInstance": null,
          "parentProcessInstanceId": null,
          "processId": "travels",
          "processName": "travels",
          "roles": Array [],
          "serviceUrl": "http://localhost:8080",
          "start": "2020-05-07T06:50:18.274Z",
          "state": "ACTIVE",
          "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
        },
      ],
    }
  }
  filters={
    Object {
      "businessKey": Array [],
      "status": Array [
        "ACTIVE",
      ],
    }
  }
  initData={
    Object {
      "ProcessInstances": Array [],
    }
  }
  isFilterClicked={false}
  isLoading={false}
  isLoadingMore={false}
  pageSize={10}
  selectedInstances={
    Object {
      "8035b580-6ae4-4aa8-9ec0-e18e19809e0b": Object {
        "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      },
    }
  }
  selectedNumber={0}
  setFilteredData={[MockFunction]}
  setInitData={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
        Array [
          Object {
            "ProcessInstances": Array [],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsAllChecked={[MockFunction]}
  setIsError={
    [MockFunction] {
      "calls": Array [
        Array [
          false,
        ],
        Array [
          false,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsLoading={[MockFunction]}
  setLimit={
    [MockFunction] {
      "calls": Array [
        Array [
          0,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedInstances={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {},
        ],
        Array [
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedNumber={[MockFunction]}
>
  <DataList
    aria-label="Process instance list"
  >
    <ul
      aria-label="Process instance list"
      className="pf-c-data-list"
    >
      <KogitoEmptyState
        body="Try using different filters"
        title="No results found"
        type={0}
      >
        <MockedComponent />
      </KogitoEmptyState>
    </ul>
  </DataList>
</ProcessListTable>
`;

exports[`ProcessListTable component tests Snapshot testing with success data 1`] = `
<ProcessListTable
  checkedArray={
    Array [
      "ACTIVE",
    ]
  }
  filteredData={
    Object {
      "ProcessInstances": Array [
        Object {
          "addons": Array [
            "process-management",
            "infinispan-persistence",
            "prometheus-monitoring",
          ],
          "businessKey": "MQQ640",
          "childProcessInstances": Array [
            Object {
              "businessKey": null,
              "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
              "processName": "HotelBooking",
            },
            Object {
              "businessKey": null,
              "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
              "processName": "FlightBooking",
            },
          ],
          "end": null,
          "endpoint": "http://localhost:8080/travels",
          "error": null,
          "id": "201a8a42-043e-375a-9f52-57c804b24db4",
          "lastUpdate": "2020-05-07T06:50:18.502Z",
          "nodes": Array [
            Object {
              "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
              "enter": "2020-05-07T06:50:18.429Z",
              "exit": "2020-05-07T06:50:18.439Z",
              "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
              "name": "Book Hotel",
              "nodeId": "17",
              "type": "SubProcessNode",
            },
          ],
          "parentProcessInstance": null,
          "parentProcessInstanceId": null,
          "processId": "travels",
          "processName": "travels",
          "roles": Array [],
          "serviceUrl": "http://localhost:8080",
          "start": "2020-05-07T06:50:18.274Z",
          "state": "ACTIVE",
          "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
        },
      ],
    }
  }
  filters={
    Object {
      "businessKey": Array [],
      "status": Array [
        "ACTIVE",
      ],
    }
  }
  initData={
    Object {
      "ProcessInstances": Array [
        Object {
          "addons": Array [
            "process-management",
            "infinispan-persistence",
            "prometheus-monitoring",
          ],
          "businessKey": "MQQ640",
          "childProcessInstances": Array [
            Object {
              "businessKey": null,
              "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
              "processName": "HotelBooking",
            },
            Object {
              "businessKey": null,
              "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
              "processName": "FlightBooking",
            },
          ],
          "end": null,
          "endpoint": "http://localhost:8080/travels",
          "error": null,
          "id": "201a8a42-043e-375a-9f52-57c804b24db4",
          "lastUpdate": "2020-05-07T06:50:18.502Z",
          "nodes": Array [
            Object {
              "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
              "enter": "2020-05-07T06:50:18.429Z",
              "exit": "2020-05-07T06:50:18.439Z",
              "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
              "name": "Book Hotel",
              "nodeId": "17",
              "type": "SubProcessNode",
            },
          ],
          "parentProcessInstance": null,
          "parentProcessInstanceId": null,
          "processId": "travels",
          "processName": "travels",
          "roles": Array [],
          "serviceUrl": "http://localhost:8080",
          "start": "2020-05-07T06:50:18.274Z",
          "state": "ACTIVE",
          "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
        },
      ],
    }
  }
  isFilterClicked={false}
  isLoading={false}
  isLoadingMore={false}
  pageSize={10}
  selectedInstances={
    Object {
      "8035b580-6ae4-4aa8-9ec0-e18e19809e0b": Object {
        "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      },
    }
  }
  selectedNumber={0}
  setFilteredData={[MockFunction]}
  setInitData={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
        Array [
          Object {
            "ProcessInstances": Array [
              Object {
                "addons": Array [
                  "process-management",
                  "infinispan-persistence",
                  "prometheus-monitoring",
                ],
                "businessKey": "MQQ640",
                "error": null,
                "id": "201a8a42-043e-375a-9f52-57c804b24db4",
                "isChecked": false,
                "isOpen": false,
                "lastUpdate": "2020-05-07T06:50:18.502Z",
                "parentProcessInstanceId": null,
                "processId": "travels",
                "processName": "travels",
                "roles": Array [],
                "rootProcessInstanceId": null,
                "serviceUrl": "http://localhost:8080",
                "start": "2020-05-07T06:50:18.274Z",
                "state": "ACTIVE",
              },
            ],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsAllChecked={[MockFunction]}
  setIsError={
    [MockFunction] {
      "calls": Array [
        Array [
          false,
        ],
        Array [
          false,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsLoading={[MockFunction]}
  setLimit={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedInstances={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {},
        ],
        Array [
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedNumber={[MockFunction]}
>
  <DataList
    aria-label="Process instance list"
  >
    <ul
      aria-label="Process instance list"
      className="pf-c-data-list"
    >
      <MockedProcessListTableItems
        filters={
          Object {
            "businessKey": Array [],
            "status": Array [
              "ACTIVE",
            ],
          }
        }
        id={0}
        initData={
          Object {
            "ProcessInstances": Array [
              Object {
                "addons": Array [
                  "process-management",
                  "infinispan-persistence",
                  "prometheus-monitoring",
                ],
                "businessKey": "MQQ640",
                "childProcessInstances": Array [
                  Object {
                    "businessKey": null,
                    "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
                    "processName": "HotelBooking",
                  },
                  Object {
                    "businessKey": null,
                    "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
                    "processName": "FlightBooking",
                  },
                ],
                "end": null,
                "endpoint": "http://localhost:8080/travels",
                "error": null,
                "id": "201a8a42-043e-375a-9f52-57c804b24db4",
                "lastUpdate": "2020-05-07T06:50:18.502Z",
                "nodes": Array [
                  Object {
                    "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
                    "enter": "2020-05-07T06:50:18.429Z",
                    "exit": "2020-05-07T06:50:18.439Z",
                    "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
                    "name": "Book Hotel",
                    "nodeId": "17",
                    "type": "SubProcessNode",
                  },
                ],
                "parentProcessInstance": null,
                "parentProcessInstanceId": null,
                "processId": "travels",
                "processName": "travels",
                "roles": Array [],
                "serviceUrl": "http://localhost:8080",
                "start": "2020-05-07T06:50:18.274Z",
                "state": "ACTIVE",
                "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
              },
            ],
          }
        }
        key="201a8a42-043e-375a-9f52-57c804b24db4"
        loadingInitData={false}
        processInstanceData={
          Object {
            "addons": Array [
              "process-management",
              "infinispan-persistence",
              "prometheus-monitoring",
            ],
            "businessKey": "MQQ640",
            "childProcessInstances": Array [
              Object {
                "businessKey": null,
                "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
                "processName": "HotelBooking",
              },
              Object {
                "businessKey": null,
                "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
                "processName": "FlightBooking",
              },
            ],
            "end": null,
            "endpoint": "http://localhost:8080/travels",
            "error": null,
            "id": "201a8a42-043e-375a-9f52-57c804b24db4",
            "lastUpdate": "2020-05-07T06:50:18.502Z",
            "nodes": Array [
              Object {
                "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
                "enter": "2020-05-07T06:50:18.429Z",
                "exit": "2020-05-07T06:50:18.439Z",
                "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
                "name": "Book Hotel",
                "nodeId": "17",
                "type": "SubProcessNode",
              },
            ],
            "parentProcessInstance": null,
            "parentProcessInstanceId": null,
            "processId": "travels",
            "processName": "travels",
            "roles": Array [],
            "serviceUrl": "http://localhost:8080",
            "start": "2020-05-07T06:50:18.274Z",
            "state": "ACTIVE",
            "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
          }
        }
        selectedInstances={
          Object {
            "8035b580-6ae4-4aa8-9ec0-e18e19809e0b": Object {
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
            },
          }
        }
        selectedNumber={0}
        setInitData={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
              Array [
                Object {
                  "ProcessInstances": Array [
                    Object {
                      "addons": Array [
                        "process-management",
                        "infinispan-persistence",
                        "prometheus-monitoring",
                      ],
                      "businessKey": "MQQ640",
                      "error": null,
                      "id": "201a8a42-043e-375a-9f52-57c804b24db4",
                      "isChecked": false,
                      "isOpen": false,
                      "lastUpdate": "2020-05-07T06:50:18.502Z",
                      "parentProcessInstanceId": null,
                      "processId": "travels",
                      "processName": "travels",
                      "roles": Array [],
                      "rootProcessInstanceId": null,
                      "serviceUrl": "http://localhost:8080",
                      "start": "2020-05-07T06:50:18.274Z",
                      "state": "ACTIVE",
                    },
                  ],
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        setIsAllChecked={[MockFunction]}
        setSelectedInstances={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {},
              ],
              Array [
                Object {},
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        setSelectedNumber={[MockFunction]}
      />
    </ul>
  </DataList>
</ProcessListTable>
`;

exports[`ProcessListTable component tests Snapshot testing with success data(with businessKey) 1`] = `
<ProcessListTable
  filteredData={
    Object {
      "ProcessInstances": Array [
        Object {
          "addons": Array [
            "process-management",
            "infinispan-persistence",
            "prometheus-monitoring",
          ],
          "businessKey": "MQQ640",
          "childProcessInstances": Array [
            Object {
              "businessKey": null,
              "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
              "processName": "HotelBooking",
            },
            Object {
              "businessKey": null,
              "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
              "processName": "FlightBooking",
            },
          ],
          "end": null,
          "endpoint": "http://localhost:8080/travels",
          "error": null,
          "id": "201a8a42-043e-375a-9f52-57c804b24db4",
          "lastUpdate": "2020-05-07T06:50:18.502Z",
          "nodes": Array [
            Object {
              "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
              "enter": "2020-05-07T06:50:18.429Z",
              "exit": "2020-05-07T06:50:18.439Z",
              "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
              "name": "Book Hotel",
              "nodeId": "17",
              "type": "SubProcessNode",
            },
          ],
          "parentProcessInstance": null,
          "parentProcessInstanceId": null,
          "processId": "travels",
          "processName": "travels",
          "roles": Array [],
          "serviceUrl": "http://localhost:8080",
          "start": "2020-05-07T06:50:18.274Z",
          "state": "ACTIVE",
          "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
        },
      ],
    }
  }
  filters={
    Object {
      "businessKey": Array [
        "MQQ640",
      ],
      "status": Array [
        "ACTIVE",
      ],
    }
  }
  initData={
    Object {
      "ProcessInstances": Array [
        Object {
          "addons": Array [
            "process-management",
            "infinispan-persistence",
            "prometheus-monitoring",
          ],
          "businessKey": "MQQ640",
          "childProcessInstances": Array [
            Object {
              "businessKey": null,
              "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
              "processName": "HotelBooking",
            },
            Object {
              "businessKey": null,
              "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
              "processName": "FlightBooking",
            },
          ],
          "end": null,
          "endpoint": "http://localhost:8080/travels",
          "error": null,
          "id": "201a8a42-043e-375a-9f52-57c804b24db4",
          "lastUpdate": "2020-05-07T06:50:18.502Z",
          "nodes": Array [
            Object {
              "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
              "enter": "2020-05-07T06:50:18.429Z",
              "exit": "2020-05-07T06:50:18.439Z",
              "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
              "name": "Book Hotel",
              "nodeId": "17",
              "type": "SubProcessNode",
            },
          ],
          "parentProcessInstance": null,
          "parentProcessInstanceId": null,
          "processId": "travels",
          "processName": "travels",
          "roles": Array [],
          "serviceUrl": "http://localhost:8080",
          "start": "2020-05-07T06:50:18.274Z",
          "state": "ACTIVE",
          "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
        },
      ],
    }
  }
  isFilterClicked={false}
  isLoading={false}
  isLoadingMore={false}
  pageSize={10}
  selectedInstances={
    Object {
      "8035b580-6ae4-4aa8-9ec0-e18e19809e0b": Object {
        "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      },
    }
  }
  selectedNumber={0}
  setFilteredData={[MockFunction]}
  setInitData={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
        Array [
          Object {
            "ProcessInstances": Array [
              Object {
                "addons": Array [
                  "process-management",
                  "infinispan-persistence",
                  "prometheus-monitoring",
                ],
                "businessKey": "MQQ640",
                "error": null,
                "id": "201a8a42-043e-375a-9f52-57c804b24db4",
                "isChecked": false,
                "isOpen": false,
                "lastUpdate": "2020-05-07T06:50:18.502Z",
                "parentProcessInstanceId": null,
                "processId": "travels",
                "processName": "travels",
                "roles": Array [],
                "rootProcessInstanceId": null,
                "serviceUrl": "http://localhost:8080",
                "start": "2020-05-07T06:50:18.274Z",
                "state": "ACTIVE",
              },
            ],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsAllChecked={[MockFunction]}
  setIsError={
    [MockFunction] {
      "calls": Array [
        Array [
          false,
        ],
        Array [
          false,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsLoading={[MockFunction]}
  setLimit={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedInstances={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {},
        ],
        Array [
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedNumber={[MockFunction]}
>
  <DataList
    aria-label="Process instance list"
  >
    <ul
      aria-label="Process instance list"
      className="pf-c-data-list"
    >
      <MockedProcessListTableItems
        filters={
          Object {
            "businessKey": Array [
              "MQQ640",
            ],
            "status": Array [
              "ACTIVE",
            ],
          }
        }
        id={0}
        initData={
          Object {
            "ProcessInstances": Array [
              Object {
                "addons": Array [
                  "process-management",
                  "infinispan-persistence",
                  "prometheus-monitoring",
                ],
                "businessKey": "MQQ640",
                "childProcessInstances": Array [
                  Object {
                    "businessKey": null,
                    "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
                    "processName": "HotelBooking",
                  },
                  Object {
                    "businessKey": null,
                    "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
                    "processName": "FlightBooking",
                  },
                ],
                "end": null,
                "endpoint": "http://localhost:8080/travels",
                "error": null,
                "id": "201a8a42-043e-375a-9f52-57c804b24db4",
                "lastUpdate": "2020-05-07T06:50:18.502Z",
                "nodes": Array [
                  Object {
                    "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
                    "enter": "2020-05-07T06:50:18.429Z",
                    "exit": "2020-05-07T06:50:18.439Z",
                    "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
                    "name": "Book Hotel",
                    "nodeId": "17",
                    "type": "SubProcessNode",
                  },
                ],
                "parentProcessInstance": null,
                "parentProcessInstanceId": null,
                "processId": "travels",
                "processName": "travels",
                "roles": Array [],
                "serviceUrl": "http://localhost:8080",
                "start": "2020-05-07T06:50:18.274Z",
                "state": "ACTIVE",
                "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
              },
            ],
          }
        }
        key="201a8a42-043e-375a-9f52-57c804b24db4"
        loadingInitData={false}
        processInstanceData={
          Object {
            "addons": Array [
              "process-management",
              "infinispan-persistence",
              "prometheus-monitoring",
            ],
            "businessKey": "MQQ640",
            "childProcessInstances": Array [
              Object {
                "businessKey": null,
                "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
                "processName": "HotelBooking",
              },
              Object {
                "businessKey": null,
                "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
                "processName": "FlightBooking",
              },
            ],
            "end": null,
            "endpoint": "http://localhost:8080/travels",
            "error": null,
            "id": "201a8a42-043e-375a-9f52-57c804b24db4",
            "lastUpdate": "2020-05-07T06:50:18.502Z",
            "nodes": Array [
              Object {
                "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
                "enter": "2020-05-07T06:50:18.429Z",
                "exit": "2020-05-07T06:50:18.439Z",
                "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
                "name": "Book Hotel",
                "nodeId": "17",
                "type": "SubProcessNode",
              },
            ],
            "parentProcessInstance": null,
            "parentProcessInstanceId": null,
            "processId": "travels",
            "processName": "travels",
            "roles": Array [],
            "serviceUrl": "http://localhost:8080",
            "start": "2020-05-07T06:50:18.274Z",
            "state": "ACTIVE",
            "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
          }
        }
        selectedInstances={
          Object {
            "8035b580-6ae4-4aa8-9ec0-e18e19809e0b": Object {
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
            },
          }
        }
        selectedNumber={0}
        setInitData={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
              Array [
                Object {
                  "ProcessInstances": Array [
                    Object {
                      "addons": Array [
                        "process-management",
                        "infinispan-persistence",
                        "prometheus-monitoring",
                      ],
                      "businessKey": "MQQ640",
                      "error": null,
                      "id": "201a8a42-043e-375a-9f52-57c804b24db4",
                      "isChecked": false,
                      "isOpen": false,
                      "lastUpdate": "2020-05-07T06:50:18.502Z",
                      "parentProcessInstanceId": null,
                      "processId": "travels",
                      "processName": "travels",
                      "roles": Array [],
                      "rootProcessInstanceId": null,
                      "serviceUrl": "http://localhost:8080",
                      "start": "2020-05-07T06:50:18.274Z",
                      "state": "ACTIVE",
                    },
                  ],
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        setIsAllChecked={[MockFunction]}
        setSelectedInstances={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {},
              ],
              Array [
                Object {},
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        setSelectedNumber={[MockFunction]}
      />
    </ul>
  </DataList>
</ProcessListTable>
`;

exports[`ProcessListTable component tests Snapshot testing with wrong query parameters 1`] = `
<ProcessListTable
  checkedArray={
    Array [
      "ACTIVE",
    ]
  }
  filteredData={
    Object {
      "ProcessInstances": Array [
        Object {
          "addons": Array [
            "process-management",
            "infinispan-persistence",
            "prometheus-monitoring",
          ],
          "businessKey": "MQQ640",
          "childProcessInstances": Array [
            Object {
              "businessKey": null,
              "id": "bfde98ed-0cdd-4700-ae87-377f7ec430cd",
              "processName": "HotelBooking",
            },
            Object {
              "businessKey": null,
              "id": "e607b2a9-0aca-4788-9623-dd2e156ce9c4",
              "processName": "FlightBooking",
            },
          ],
          "end": null,
          "endpoint": "http://localhost:8080/travels",
          "error": null,
          "id": "201a8a42-043e-375a-9f52-57c804b24db4",
          "lastUpdate": "2020-05-07T06:50:18.502Z",
          "nodes": Array [
            Object {
              "definitionId": "_1A708F87-11C0-42A0-A464-0B7E259C426F",
              "enter": "2020-05-07T06:50:18.429Z",
              "exit": "2020-05-07T06:50:18.439Z",
              "id": "39d5fe7c-4e37-44ce-8d25-05a4a29ec6ea",
              "name": "Book Hotel",
              "nodeId": "17",
              "type": "SubProcessNode",
            },
          ],
          "parentProcessInstance": null,
          "parentProcessInstanceId": null,
          "processId": "travels",
          "processName": "travels",
          "roles": Array [],
          "serviceUrl": "http://localhost:8080",
          "start": "2020-05-07T06:50:18.274Z",
          "state": "ACTIVE",
          "variables": "{\\"flight\\":{\\"flightNumber\\":\\"MX555\\",\\"seat\\":null,\\"gate\\":null,\\"departure\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"arrival\\":\\"2020-05-09T03:30:00.000+05:30\\"},\\"hotel\\":{\\"name\\":\\"Perfect hotel\\",\\"address\\":{\\"street\\":\\"street\\",\\"city\\":\\"Bengaluru\\",\\"zipCode\\":\\"12345\\",\\"country\\":\\"India\\"},\\"phone\\":\\"09876543\\",\\"bookingNumber\\":\\"XX-012345\\",\\"room\\":null},\\"trip\\":{\\"city\\":\\"Bengaluru\\",\\"country\\":\\"India\\",\\"begin\\":\\"2020-05-08T03:30:00.000+05:30\\",\\"end\\":\\"2020-05-09T03:30:00.000+05:30\\",\\"visaRequired\\":false},\\"traveller\\":{\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"email\\":\\"ajaganat@redhat.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Bangalore\\",\\"city\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\",\\"country\\":\\"Poland\\"}}}",
        },
      ],
    }
  }
  filters={
    Object {
      "businessKey": Array [],
      "status": Array [
        "ACTIVE",
      ],
    }
  }
  initData={
    Object {
      "ProcessInstances": Array [],
    }
  }
  isFilterClicked={false}
  isLoading={false}
  isLoadingMore={false}
  pageSize={10}
  selectedInstances={
    Object {
      "8035b580-6ae4-4aa8-9ec0-e18e19809e0b": Object {
        "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      },
    }
  }
  selectedNumber={0}
  setFilteredData={[MockFunction]}
  setInitData={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
        Array [
          Object {
            "ProcessInstances": Array [],
          },
        ],
        Array [
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsAllChecked={[MockFunction]}
  setIsError={
    [MockFunction] {
      "calls": Array [
        Array [
          false,
        ],
        Array [
          false,
        ],
        Array [
          false,
        ],
        Array [
          true,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setIsLoading={[MockFunction]}
  setLimit={
    [MockFunction] {
      "calls": Array [
        Array [
          0,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedInstances={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {},
        ],
        Array [
          Object {},
        ],
        Array [
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedNumber={[MockFunction]}
>
  <withRouter(ServerErrors)
    error={
      [Error: Network error: No more mocked responses for the query: query getProcessInstances($where: ProcessInstanceArgument, $offset: Int, $limit: Int) {
  ProcessInstances(where: $where, pagination: {offset: $offset, limit: $limit}) {
    id
    processId
    processName
    parentProcessInstanceId
    rootProcessInstanceId
    roles
    state
    start
    lastUpdate
    addons
    businessKey
    serviceUrl
    error {
      nodeDefinitionId
      message
    }
  }
}
, variables: {"where":{"state":{"in":["ACTIVE"]},"parentProcessInstanceId":{"isNull":true}},"offset":0,"limit":10}]
    }
    variant="large"
  >
    <ServerErrors
      error={
        [Error: Network error: No more mocked responses for the query: query getProcessInstances($where: ProcessInstanceArgument, $offset: Int, $limit: Int) {
  ProcessInstances(where: $where, pagination: {offset: $offset, limit: $limit}) {
    id
    processId
    processName
    parentProcessInstanceId
    rootProcessInstanceId
    roles
    state
    start
    lastUpdate
    addons
    businessKey
    serviceUrl
    error {
      nodeDefinitionId
      message
    }
  }
}
, variables: {"where":{"state":{"in":["ACTIVE"]},"parentProcessInstanceId":{"isNull":true}},"offset":0,"limit":10}]
      }
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/",
          "url": "/",
        }
      }
      variant="large"
    >
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          <Bullseye>
            <div
              className="pf-l-bullseye"
            >
              <EmptyState
                variant="full"
              >
                <div
                  className="pf-c-empty-state"
                >
                  <EmptyStateIcon
                    color="var(--pf-global--danger-color--100)"
                    icon={[Function]}
                    size="md"
                  >
                    <ExclamationCircleIcon
                      aria-hidden="true"
                      className="pf-c-empty-state__icon"
                      color="var(--pf-global--danger-color--100)"
                      noVerticalAlign={false}
                      size="md"
                      title={null}
                    >
                      <svg
                        aria-hidden="true"
                        aria-labelledby={null}
                        className="pf-c-empty-state__icon"
                        fill="var(--pf-global--danger-color--100)"
                        height="1.5em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.1875em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1.5em"
                      >
                        <path
                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          transform=""
                        />
                      </svg>
                    </ExclamationCircleIcon>
                  </EmptyStateIcon>
                  <Title
                    headingLevel="h1"
                    size="4xl"
                  >
                    <h1
                      className="pf-c-title pf-m-4xl"
                    >
                      Error fetching data
                    </h1>
                  </Title>
                  <EmptyStateBody>
                    <div
                      className="pf-c-empty-state__body"
                    >
                      An error occurred while accessing data.
                       
                      <Component
                        id="display-error"
                        isInline={true}
                        onClick={[Function]}
                        variant="link"
                      >
                        <ComponentWithOuia
                          component={[Function]}
                          componentProps={
                            Object {
                              "children": "See more details",
                              "id": "display-error",
                              "isInline": true,
                              "onClick": [Function],
                              "variant": "link",
                            }
                          }
                          consumerContext={null}
                        >
                          <Button
                            id="display-error"
                            isInline={true}
                            onClick={[Function]}
                            ouiaContext={
                              Object {
                                "isOuia": false,
                                "ouiaId": null,
                              }
                            }
                            variant="link"
                          >
                            <button
                              aria-disabled={null}
                              aria-label={null}
                              className="pf-c-button pf-m-link pf-m-inline"
                              disabled={false}
                              id="display-error"
                              onClick={[Function]}
                              tabIndex={null}
                              type="button"
                            >
                              <span
                                className="pf-c-button__text"
                              >
                                See more details
                              </span>
                            </button>
                          </Button>
                        </ComponentWithOuia>
                      </Component>
                    </div>
                  </EmptyStateBody>
                  <Component
                    id="goback-button"
                    onClick={[Function]}
                    variant="primary"
                  >
                    <ComponentWithOuia
                      component={[Function]}
                      componentProps={
                        Object {
                          "children": "Go back",
                          "id": "goback-button",
                          "onClick": [Function],
                          "variant": "primary",
                        }
                      }
                      consumerContext={null}
                    >
                      <Button
                        id="goback-button"
                        onClick={[Function]}
                        ouiaContext={
                          Object {
                            "isOuia": false,
                            "ouiaId": null,
                          }
                        }
                        variant="primary"
                      >
                        <button
                          aria-disabled={null}
                          aria-label={null}
                          className="pf-c-button pf-m-primary"
                          disabled={false}
                          id="goback-button"
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          Go back
                        </button>
                      </Button>
                    </ComponentWithOuia>
                  </Component>
                </div>
              </EmptyState>
            </div>
          </Bullseye>
        </section>
      </PageSection>
    </ServerErrors>
  </withRouter(ServerErrors)>
</ProcessListTable>
`;
